add language selector with br and us

--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "country-flag-icons": "^1.5.9",
+    "i18next": "^23.8.2",
+    "i18next-browser-languagedetector": "^7.2.0",
     "localforage": "^1.10.0",
     "lucide-react": "^0.319.0",
     "match-sorter": "^6.3.3",
@@ -42,6 +45,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-i18next": "^14.0.5",
     "react-router-dom": "^6.21.3",
     "recharts": "^2.11.0",
     "sonner": "^1.4.0",
