feat: helmet for dynamic meta tags

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tanstack/react-table": "^8.11.7",
+    "@types/react-helmet": "^6.1.11",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -48,6 +49,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.1",
     "react-i18next": "^14.0.5",
     "react-router-dom": "^6.21.3",
