feat: add range filter to overview

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "country-flag-icons": "^1.5.9",
+    "date-fns": "^3.6.0",
     "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^7.2.0",
     "localforage": "^1.10.0",
@@ -47,6 +48,7 @@
     "match-sorter": "^6.3.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
