--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "sonner": "^1.4.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
     "zod": "^3.22.4",
