--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "match-sorter": "^6.3.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
+    "react-best-gradient-color-picker": "^3.0.7",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
