--- a/Caddyfile
+++ b/Caddyfile
@@ -24,6 +24,9 @@
     # enable gzipping responses
     encode gzip
 
+    header /* Cache-Control "public, max-age=31536000, immutable"
+	header /index.html Cache-Control "no-cache"
+
     # serve files from 'dist'
     file_server
 
